ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  rules:
    - http:
        paths:
          - path: /guestbook
            pathType: Prefix
            backend:
              service:
                name: guestbook
                port:
                  number: 3000
